feat(avatars): standardize generated avatars using gestalt and move avatar uploads to backend